k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: advana-marketplace
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30090  # access via localhost:30090
    protocol: TCP
    name: http
